--- a/src/passwordAppeal.html
+++ b/src/passwordAppeal.html
@@ -74,9 +74,9 @@
 			<!-- 步骤二 -->
 			<div id="secondBox" class="form-wrap" style="display:none">
 				<div class="item">
-					<label for="psw">输入旧密码:</label>
+					<label for="oldPsw">输入旧密码:</label>
 					<div class="input-wrap">
-						<input id="psw" type="password" placeholder="旧密码">
+						<input id="oldPsw" type="password" placeholder="旧密码">
 						<i class="icon-eyes"></i>
 					</div>
 				</div>
