--- a/src/userCenter.html
+++ b/src/userCenter.html
@@ -32,7 +32,13 @@
 				<div class="header">
 					<div class="title">我的账号</div>
 					<div class="safety-level">
-						<span>安全指数</span><span></span><span class="text">低</span>
+						<span>安全指数</span>
+						<span class="secure-step">
+							<i class="focus"></i>
+							<i></i>
+							<i></i>
+						</span>
+						<span class="text">低</span>
 					</div>
 				</div>
 
@@ -47,7 +53,7 @@
 							<label class="identy-num" for="identyNum">身份证号:</label>
 							<input id="identyNum" type="number" placeholder="请输入您的身份证号码">
 						</div>
-						<button class="primary">提交</button>
+						<button id="submit" class="primary">提交</button>
 					</div>
 				</div>
 
@@ -105,6 +111,33 @@
 	<script src="lib/jquery.js"></script>
 	<script src="js/common.js"></script>
 	<!-- endbuild -->
+	<script type="text/javascript">
+		// 表单提交验证
+		function formVerify() {
+			$("#submit").click(function() {
+				var identyNumInput = $("#identyNum");
+				var realNameInput = $("#realName");
+				var eInfoDom = ''; // 错误提示
+				$('.yg-error').remove(); //重置所有错误提示
+				if (!verification(realNameInput.val(), 'require')) {
+					eInfoDom = errorInfo('请填写真实姓名');
+					realNameInput.parent().append(eInfoDom);
+					return
+				} else if (!verification(identyNumInput.val(), 'require')) {
+					eInfoDom = errorInfo('请填写身份证信息');
+					identyNumInput.parent().append(eInfoDom);
+					return
+				} else {
+					// ajax 提交
+
+				}
+			})
+		}
+
+		$(function() {
+			formVerify();
+		})
+	</script>
 
 </body>
 
